controllers with mongo template and mongorepository