@@ -9,16 +9,15 @@ import com.saurabh.mongodblegostore.model.constants.PaymentType;
 import com.saurabh.mongodblegostore.persistance.repository.LegoSetRepository;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.data.mongodb.core.MongoTemplate;
-import org.springframework.stereotype.Service;
+import org.springframework.stereotype.Component;
 
 import java.time.LocalDate;
-import java.util.Arrays;
-import java.util.Collection;
+import java.util.List;
 
-@Service
+@Component
 public class DbSeeder implements CommandLineRunner {
-    private LegoSetRepository legoSetRepository;
-    private MongoTemplate mongoTemplate;
+    private final LegoSetRepository legoSetRepository;
+    private final MongoTemplate mongoTemplate;
 
     public DbSeeder(LegoSetRepository legoSetRepository, MongoTemplate mongoTemplate) {
         this.legoSetRepository = legoSetRepository;
@@ -27,7 +26,10 @@ public class DbSeeder implements CommandLineRunner {
 
     @Override
     public void run(String... args) {
+        // delete all entries
         this.legoSetRepository.deleteAll();
+
+        //drop our collection and start fresh
         this.mongoTemplate.dropCollection(PaymentOptions.class);
 
         /*
@@ -35,10 +37,10 @@ public class DbSeeder implements CommandLineRunner {
          */
 
         PaymentOptions creditCardPayment = new PaymentOptions(PaymentType.CreditCard, 0);
-        PaymentOptions payPalPayment = new PaymentOptions(PaymentType.PayPal, 1);
-        PaymentOptions cashPayment = new PaymentOptions(PaymentType.Cash, 10);
         this.mongoTemplate.insert(creditCardPayment);
+        PaymentOptions payPalPayment = new PaymentOptions(PaymentType.PayPal, 1);
         this.mongoTemplate.insert(payPalPayment);
+        PaymentOptions cashPayment = new PaymentOptions(PaymentType.Cash, 10);
         this.mongoTemplate.insert(cashPayment);
 
         /*
@@ -47,51 +49,53 @@ public class DbSeeder implements CommandLineRunner {
 
         LegoSet millenniumFalcon = new LegoSet(
                 "Millennium Falcon",
-                LegoSetDifficulty.HARD, "Star Wars",
-
-                Arrays.asList(
+                LegoSetDifficulty.HARD,
+                "Star Wars",
+                List.of(
                         new ProductReview("Dan", 7),
                         new ProductReview("Anna", 10),
                         new ProductReview("John", 8)
-                ), new DeliveryInfo(LocalDate.now().plusDays(1), 30, true),
-
+                ),
+                new DeliveryInfo(LocalDate.now().plusDays(1), 30, true),
                 creditCardPayment);
 
         LegoSet skyPolice = new LegoSet(
                 "Sky Police Air Base",
                 LegoSetDifficulty.MEDIUM,
                 "City",
-                Arrays.asList(
+                List.of(
                         new ProductReview("Dan", 5),
                         new ProductReview("Andrew", 8)
-                ), new DeliveryInfo(LocalDate.now().plusDays(3), 50, true),
-
+                ),
+                new DeliveryInfo(LocalDate.now().plusDays(3), 50, true),
                 creditCardPayment);
 
         LegoSet mcLarenSenna = new LegoSet(
                 "McLaren Senna", LegoSetDifficulty.EASY,
                 "Speed Champions",
-                Arrays.asList(
+                List.of(
                         new ProductReview("Bogdan", 9),
                         new ProductReview("Christa", 9)
                 ),
                 new DeliveryInfo(LocalDate.now().plusDays(7), 70, false),
-
                 payPalPayment);
 
         LegoSet mindstormsEve = new LegoSet(
                 "MINDSTORMS EV3", LegoSetDifficulty.HARD,
                 "Mindstorms",
-                Arrays.asList(
+                List.of(
                         new ProductReview("Cosmin", 10),
                         new ProductReview("Jane", 9),
                         new ProductReview("James", 10)
                 ),
                 new DeliveryInfo(LocalDate.now().plusDays(10), 100, false),
-
                 cashPayment);
 
-        Collection<LegoSet> initialProducts = Arrays.asList(millenniumFalcon, mindstormsEve, mcLarenSenna, skyPolice);
+        /**
+         * Array.asList creates mutable list collection,
+         * List.of creates immutable (preferred)
+         */
+        List<LegoSet> initialProducts = List.of(millenniumFalcon, mindstormsEve, mcLarenSenna, skyPolice);
 
         this.legoSetRepository.insert(initialProducts);
     }
